--- a/ProgrammingInLua/src/c_api/CAPI/CAPI/CAPI.vcxproj
+++ b/ProgrammingInLua/src/c_api/CAPI/CAPI/CAPI.vcxproj
@@ -79,6 +79,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="basic_api.cpp" />
+    <ClCompile Include="TestLuaConfig.cpp" />
+    <ClCompile Include="Tools.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TestLuaConfig.h" />
+    <ClInclude Include="Tools.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="lua_config.lua" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
