--- a/ProgrammingInLua/src/c_api/CAPI/CAPI/CAPI.vcxproj.filters
+++ b/ProgrammingInLua/src/c_api/CAPI/CAPI/CAPI.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClCompile Include="Tools.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="TestCallFunc.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TestBase.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TestLuaConfig.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Tools.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="TestCallFunc.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="TestBase.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
