--- a/ProgrammingInLua/src/c_api/CAPI/CAPI/CAPI.vcxproj
+++ b/ProgrammingInLua/src/c_api/CAPI/CAPI/CAPI.vcxproj
@@ -95,6 +95,7 @@
     <ClInclude Include="Tools.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="lua_array.lua" />
     <None Include="lua_config.lua" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
