--- a/Unity/img/sklr2.plist
+++ b/Unity/img/sklr2.plist
@@ -11,7 +11,7 @@
                                         <key>kind</key>
                                         <string>software-package</string>
                                         <key>url</key>
-                                        <string>https://192.168.20.102/sklr2.ipa</string>
+                                        <string>https://192.168.83.250/sklr_ii.ipa</string>
                                 </dict>
                         </array>
                         <key>metadata</key>
@@ -23,7 +23,7 @@
                                 <key>kind</key>
                                 <string>software</string>
                                 <key>title</key>
-                                <string>sklr20831v5.ipa</string>
+                                <string>时空猎人3D IOS版本</string>
                         </dict>
                 </dict>
         </array>
