--- a/Unity/img/sklr2.plist
+++ b/Unity/img/sklr2.plist
@@ -17,7 +17,7 @@
                         <key>metadata</key>
                         <dict>
                                 <key>bundle-identifier</key>
-                                <string>cn.yh.lieren2dist</string>
+                                <string>cn.yh.lieren2test.001</string>
                                 <key>bundle-version</key>
                                 <string>1.0</string>
                                 <key>kind</key>
